[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Trap.gd" type="Script" id=1]
[ext_resource path="res://Tiles/laidNetPrim.png" type="Texture" id=2]
[ext_resource path="res://Tiles/sprungNetPrim.png" type="Texture" id=3]
[ext_resource path="res://Tiles/sprungNetSeco.png" type="Texture" id=4]

[node name="Trap" type="Node2D"]
script = ExtResource( 1 )

[node name="LaidSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="SprungSpritePrim" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="SprungSpriteSeco" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
